--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,8 @@
   "page_action" :
   {
     "default_icon" : "sandwich-19.png",
-    "default_title" : "Click to see the Password!",
-    "default_popup": "popup.html"
+    "default_title" : "Click to see the Password!"
+    //"default_popup": "popup.html"
     //"popup": "popup.html"
   },
   "content_scripts" : [
@@ -35,6 +35,6 @@
     "48" : "sandwich-48.png",
     "128" : "sandwich-128.png"
   },
-  "web_accessible_resources": ["new.js","index.html"],
+  "web_accessible_resources": ["contentscript","new.js","sandwich-48.png"],
   "manifest_version": 2
 }
